[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Bijon Setyawan Raya <nathan.setyawan96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.92.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
