[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Bijon Setyawan Raya <nathan.setyawan96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.92.0"}
dotenv = "^0.0.5"
numpy = "^1.24.2"
pandas = "^1.5.3"
pydantic = "^1.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
